--- a/store/frontend/src/index.css
+++ b/store/frontend/src/index.css
@@ -12,8 +12,32 @@ header {
   padding: 1rem;
 }
 
+main {
+  padding: 1rem;
+}
+
 header a {
   color: #ffffff;
   font-weight: bold;
   text-decoration: none;
+}
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.product {
+  border: 1px #404040 solid;
+  margin: 1rem;
+}
+
+.product img {
+  width: 100%;
+  max-width: 400px;
+}
+
+.product-info {
+  padding: 1rem;
 }
