--- a/store/frontend/src/index.css
+++ b/store/frontend/src/index.css
@@ -15,6 +15,20 @@ main {
   flex: 1;
 }
 
+
+a{
+  text-decoration: none;
+}
+
+.btn-primary {
+  background-color: #9335ff;
+  border: none;
+  font-weight: 500;
+}
+.btn-primary:hover {
+  background-color: #a85cff;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -33,4 +47,8 @@ main {
 
 .product-info {
   padding: 1rem;
+}
+
+.rating span {
+  color: #ffc000;
 }
