--- a/store/frontend/src/index.css
+++ b/store/frontend/src/index.css
@@ -24,8 +24,16 @@ a {
   border: none;
   font-weight: 500;
 }
-.btn-primary:hover {
+
+.btn-check:checked + .btn,
+.btn.active,
+.btn.show,
+.btn:first-child:active,
+:not(.btn-check) + .btn:active {
   background-color: #a85cff;
+}
+.btn-primary:hover {
+  background-color: #6914ca;
 }
 
 .products {
@@ -54,4 +62,8 @@ a {
 
 .img-large {
   max-width: 100%;
+}
+
+.img-thumbnail {
+  height: 80px;
 }
