--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -80,3 +80,28 @@ a {
   border-bottom: 0.2rem solid #f08000;
   color: #f08000;
 }
+
+.navbar-brand {
+  font-weight: bold;
+}
+.side-navbar {
+  width: 240px;
+  height: 100%;
+  position: absolute;
+  left: -300px;
+  background-color: #100901;
+  transition: 0.5s;
+}
+
+.site-container {
+  transition: 0.4s;
+}
+.active-cont {
+  margin-left: 240px;
+}
+.active-nav {
+  left: 0;
+}
+.text-bold {
+  font-weight: bold;
+}
